UMCarroJa/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/lazaropinheiro/POO/UMCarroJa
-d
/Users/lazaropinheiro/POO/UMCarroJa/doc
-encoding
UTF-8
-charset
UTF-8
/Users/lazaropinheiro/POO/UMCarroJa/ClassesBase/Aluguer.java
<---- end of javadoc command ---->
Loading source file /Users/lazaropinheiro/POO/UMCarroJa/ClassesBase/Aluguer.java...
/Users/lazaropinheiro/POO/UMCarroJa/ClassesBase/Aluguer.java:112: error: invalid method declaration; return type required
    public tempoViagem(){
           ^
1 error
